# artificial_potential_fields

./: CMakeLists.txt  README.md  package.xml
cfg/: setAPF.cfg
include/artificial_potential_fields/: APF.h  cloud_viewer.h
launch/: all.launch  all.launch~  px4_simulation.launch  tesi.launch~  test.launch~
models/challenge_maze/: model.config  model.sdf
models/crazy_maze/: model.config  model.sdf
models/quadrotor/meshes/: quadrotor.dae  quadrotor.stl
models/quadrotor/urdf/: quadrotor.urdf.xacro
rviz/: rviz.rviz
src/: APF.cpp  APF_attitude.cpp  cloud_viewer.cpp  quadrotor_controller.cpp  quadrotor_controller_with_goal.cpp  quadrotor_teleop.cpp  rviz_force_viewer.cpp  teleop_joy.cpp  teleop_key.cpp
worlds/: challenge_maze.world  crazy_maze.world  empty.world  simple_obstacle.world
